EE-179: Fix spacing for basic info on project and comment page

--- a/src/app/project/project.component.scss
+++ b/src/app/project/project.component.scss
@@ -85,6 +85,7 @@
         p {
             font-size: 1rem;
             display: inline-block;
+            margin-left: 10px;
         }
     }
   }
@@ -133,6 +134,7 @@
       font-size: .8rem;
       line-height: 1.25;
       margin-bottom: 5px;
+      margin-left: 10px;
     }
     .organization-item {
       margin-top: 0;
